--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,62 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turisteando</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>turisteando</title>
 </head>
 <body>
     <header>
-        <div><img src="https://placeimg.com/640/480/tech" alt="Imagen random"></div>
-        <div><img src="/img/tech.jpeg"></div>
-        <nav>
-            <ul>
-                <li><a href="/">Página principal</a></li>
-                <li><a href="#">Acerca de</a></li>
-                <li><a href="#">Nuestros productos</a></li>
-                <li><a href="#">Contáctanos</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <div class="header-right">
+                <a href="#"><span class="logo">turistANDO</span></a>
+                <nav>
+                    <a href="#">Cómo funciona</a>
+                    <a href="#">Conseguí laburo</a>
+                </nav>
+            </div>
+            <div class="header-left">
+                <nav>
+                    <a href="/src/views/login.html">Ingresá</a>
+                    <a href="/src/views/register.html">Registrate</a>
+                    <a href="#">Creá un proyecto</a>
+                </nav>
+            </div>
+        </div>
     </header>
     <main>
-        <section>
-            <h1>Página principal</h1>
-        </section>
-
-        <section>
-            <h2>Publicidad</h2>
-            <div>Banner</div>
-        </section>
-
-        <section>
-            <h2>Productos</h2>
-            <div>
-                <article>
-                    <img src="" alt="">
-                    <h4>Título del producto</h4>
-                    <p>Descripción del producto<br>
-                    <p>Precio: $5.676</p>
-                </article>
-                <article>
-                    <img src="" alt="">
-                    <h4>Título del producto</h4>
-                    <p>Descripción del producto<br>
-                    <p>Precio: $5.676</p>
-                </article>
-                <article>
-                    <img src="" alt="">
-                    <h4>Título del producto</h4>
-                    <p>Descripción del producto<br>
-                    <p>Precio: $5.676</p>
-                </article>
+        <section class="hero"> <!-- Este lo uso para el fondo -->
+            <div class="hero-item">
+                <!--<img src="img/hero-bg.jpeg" alt="Imagen del producto">-->
+                <div class="container">
+                    <div class="hero-desc">
+                        <h2>Contrará lo mejor de lo mejor para tus proyectos</h2>
+                        <p>Millones de personas usan GratisLancer para hacer sus sueños realidad</p>
+                        <div class="hero-actions">
+                            <a href="#">Contrátá un GratisLancer</a>
+                            <a href="#">Hacete millonario/a</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </section>
-        <section>
-
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga repudiandae, eveniet, ratione voluptatibus omnis similique debitis corrupti, enim mollitia sapiente nihil numquam! Consequuntur numquam voluptates iste, dicta provident repudiandae obcaecati!</p>
-            <p id="lorem"><strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam ratione repellat vero maiores. Non, consequatur.<br><br>
-            Temporibus obcaecati earum quia incidunt mollitia doloribus voluptates deserunt nisi, ab repudiandae recusandae illum praesentium.</strong></p>
-            <span>Un texto</span>
-            <span>Un texto</span> 
-            <span>Un texto</span><span>Un texto</span> 
         </section>
     </main>
 </body>
