--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <%- include('partials/header.ejs') %>
     <main>
         <div class="register-form">
             <h1>Formulario de registro</h1>
@@ -73,5 +74,6 @@
             </form>
         </div>
     </main>
+    <%- include('partials/footer.ejs') %>
 </body>
 </html>
