--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -2,10 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <%- include('partials/head.ejs') %>
 </head>
 <body>
     <%- include('partials/header.ejs') %>
