agregando products/ejs/estilos

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,13 +13,62 @@
                 <!--<img src="img/hero-bg.jpeg" alt="Imagen del producto">-->
                 <div class="container">
                     <div class="hero-desc">
-                        <h2>Contrará lo mejor de lo mejor para tus proyectos</h2>
-                        <p>Millones de personas usan GratisLancer para hacer sus sueños realidad</p>
-                        <div class="hero-actions">
-                            <a href="#">Contrátá un GratisLancer</a>
-                            <a href="#">Hacete millonario/a</a>
+                        <h1>Viajá por Argentina</h1>
+                        <h3>Elegí tu próximo destino WITH US!</h3>
+
+                        <div class="contenido-textos">
+
+                        <!--lista de provincias -->            
+                            <p>Choose here! </p>
+                            <select name="lista-provincia">
+                    
+                                <option value="Ciudad Autonoma de Buenos Aires">Ciudad Autonoma de Buenos Aires</option> 
+                                <option value="Buenos Aires">Buenos Aires</option> 
+                                <option value="Catamarca">Catamarca</option>
+                                <option value="Chaco">Chaco</option>
+                                <option value="Chubut">Chubut</option>
+                                <option value="Córdoba">Córdoba</option>
+                                <option value="Corrientes">Corrientes</option>
+                                <option value="Entre Ríos">Entre Ríos</option>
+                                <option value="Formosa">Formosa</option>
+                                <option value="Jujuy">Jujuy</option>
+                                <option value="La Pampa">La Pampa</option>
+                                <option value="La Rioja">La Rioja</option>
+                                <option value="Mendoza">Mendoza</option>
+                                <option value="Misiones">Misiones</option>
+                                <option value="Neuquén">Neuquén</option>
+                                <option value="Rio Negro">Rio Negro</option>
+                                <option value="Salta">Salta</option>
+                                <option value="Tucumán">Tucumán</option>
+                            </select>
+
+                        </div>
+        <!--espacio para separar de la barra de busqueda las imgs-->
+
+                        <br>
+
+        <!--GALERIA DE FOTOS - -->
+        <section class="nuevo">
+            <div class="contenedor">
+         <div class="imagen-nuevo">
+            <img src="../images/bsas.jpg" alt="buenos aires" width="350px">
+            <div class="hover-galeria">
+                <p>Buenos Aires</p>
+                <p>Ver detalle</p>
+           </div>
+                    </div>
+         <div class="imagen-nuevo">
+            <img src="../images/misiones.jpg" alt="misiones" width="350px">
+            <div class="hover-galeria">
+                            <p>Misiones</p>
+                            <p>Ver detalle</p>
+                            
                         </div>
                     </div>
+
+
+
+
                 </div>
             </div>
         </section>
