--- a/src/views/products/buenosaires.ejs
+++ b/src/views/products/buenosaires.ejs
@@ -1,6 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/products.css">
+    <title>Buenos Aires</title>
     <%- include('partials/head.ejs') %>
 </head>
 <body>
@@ -10,22 +15,7 @@
     <main>
         <h1>Conocé Buenos Aires</h1>
     </main>
-    <%- include('partials/footer.ejs') %>
-</body>
-</html>
-
-<!--flex-->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/flexbox.css">
-    <title>Repaso de flexbox</title>
-</head>
-<body>
-    <h1>Repaso de flexbox</h1>
+    <h1>Concoc+e Buenos Aires WITH US!</h1>
     <div class="flex-container">
         <div class="flex-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
@@ -94,5 +84,6 @@
             </p>
         </div>
     </div>
+    <footer>  <%- include('partials/footer.ejs') %></footer>
 </body>
 </html>
