--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,21 +1,19 @@
 <header>
     <div class="container">
       <div class="header-left">
-          
           <nav>
             <a href="#">Turisteando</a>
           </nav>
       </div>
       <div class="header-center">
-        <img src="../../images/gif fondo blanco.gif" alt="logo">
+        <img src="../../../public/images/gif.gif" alt="logo">
       </div>
       <div class="header-right">
           <nav>
               <a href="/carrito"><i class="fas fa-shopping-cart"></i></a>
               <a href="#"><i class="fab fa-facebook-square"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fas fa-envelope"></i></a>
-              
+              <a href="#"><i class="fas fa-envelope"></i></a>           
           </nav>
       </div>
     </div>
