--- a/src/views/products/buenosaires.ejs
+++ b/src/views/products/buenosaires.ejs
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/products.css">
     <title>Buenos Aires</title>
-    <%- include('partials/head.ejs') %>
+    <%- include('../partials/head.ejs') %>
 </head>
 <body>
     <header>
-        <%- include('partials/header.ejs') %>
+        <%- include('../partials/header.ejs') %>
     </header>
     <main>
         <h1>Conocé Buenos Aires</h1>
@@ -84,6 +84,6 @@
             </p>
         </div>
     </div>
-    <footer>  <%- include('partials/footer.ejs') %></footer>
+    <footer>  <%- include('../partials/footer.ejs') %></footer>
 </body>
 </html>
