--- a/src/views/products/buenosaires.ejs
+++ b/src/views/products/buenosaires.ejs
@@ -16,68 +16,78 @@
         <h1>Conocé Buenos Aires</h1>
     </main>
     <h1>Concoc+e Buenos Aires WITH US!</h1>
-    <div class="flex-container">
-        <div class="flex-item">
+
+    <h3>Alojamiento</h3>
+
+    <div class="pic-container">
+        <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
+
             <p>
                 Caja 1<br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident hic, consequatur officia totam, numquam impedit molestiae eum quo ea tenetur ipsum blanditiis sit, nesciunt iusto! Rerum voluptatum sint aperiam. Obcaecati?
             </p>
         </div>
-        <div class="flex-item">
+        <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
             <p>
                 Caja 2
             </p>
         </div>
-        <div class="flex-item">
+        <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
             <p>
                 Caja 3
             </p>
         </div>
-        <div class="flex-item">
+
+        <h3>Pasajes</h3>
+
+        <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
             <p>
                 Caja 4
             </p>
         </div>
-        <div class="flex-item">
+        <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
             <p>
                 Caja 5
             </p>
         </div>
-        <div class="flex-item">
+        <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
             <p>
                 Caja 6
             </p>
         </div>
-        <div class="flex-item">
+        <h3> Que hacer</h3>
+
+
+        <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
             <p>
                 Caja 7
             </p>
         </div>
-        <div class="flex-item">
+        <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
             <p>
                 Caja 8
             </p>
         </div>
-        <div class="flex-item">
+        <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
             <p>
                 Caja 9
             </p>
         </div>
-        <div class="flex-item">
+        <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
             <p>
                 Caja 10
             </p>
         </div>
-        <div class="flex-item">
+        <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
             <p>
                 Caja 11
