--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -31,7 +31,7 @@
          <!-- MAPA -->
 
     <div class ="map"> 
-        <div id="vmap" style="width: 800px; height: 900px; opacity: 0.8;"></div>
+        <div id="vmap" style="width: 800px; height: 900px; opacity: 0.8; display: none"></div>
     </div>
 
     <div class="box">
