--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,7 +13,7 @@
               <a href="/carrito"><i class="fas fa-shopping-cart"></i></a>
               <a href="#"><i class="fab fa-facebook-square"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fas fa-envelope"></i></a>           
+              <a href="/contact"><i class="fas fa-envelope"></i></a>           
           </nav>
       </div>
     </div>
