--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <%- include('partials/head.ejs') %>
+    </head>
 <body>
     <h1>Gracias por contactarte</h1>
+
+    <div>
+        <h2>Contacto</h2>
+        <form action="contacto.html">
+            <div class="row">
+                <label for="email">Email: </label>
+                <input type="email" name="email" id="email" placeholder="Ingresa un email válido">
+            </div>
+
+            <div class="row">
+                <label for="message">Mensaje: </label>
+                <textarea name="message" id="message" rows="5" placeholder="Ingresa la razón del contacto aquí"></textarea>
+            </div>
+
+            <div class="row">
+                <button type="submit">Enviar</button>
+            </div>
+        </form>
+    </div>
+    <footer>
+        <%- include('partials/footer.ejs') %>
+   </footer>
 </body>
 </html>
