--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -8,7 +8,38 @@
 
 <body>
     <%- include('partials/header.ejs') %>
-    <h1>Gracias por registrarte</h1>
-    <%- include('partials/footer.ejs') %>
+
+    <div class="login-form">
+        <h1>Inicia sesión</h1>
+        <form action="exito.html" method="POST">
+            <div class="row">
+                <label for="email">Email: </label>
+                <input type="email" name="email" id="email" placeholder="Ingresa un email válido">
+            </div>
+
+            <div class="row">
+                <label for="password">Contraseña: </label>
+                <input type="password" name="password" id="password" placeholder="Ingresa tu contraseña">
+            </div>
+
+            <div class="row">
+                <p>Perfil de usuario:</p>
+                <label>
+                    <input type="checkbox" name="user-type" id="user-type-buyer" value="buyer"> Comprador
+                </label>
+                <label>
+                    <input type="checkbox" name="user-type" id="user-type-seller" value="seller"> Vendedor
+                </label>
+            </div>
+
+            <div class="row">
+                <button type="submit">Enviar</button>
+            </div>
+        </form>
+    </div>
+    <footer>
+         <%- include('partials/footer.ejs') %>
+    </footer>
+   
 </body>
 </html>
