--- a/public/css/products.css
+++ b/public/css/products.css
@@ -18,7 +18,7 @@
     width: calc(100% - 1rem);
     /* height: 100px; */
 
-    background-color:pink;
+    background-color:rgb(139, 186, 248);
     margin-right: .5rem;
     margin-left: .5rem;
     margin-bottom: .5rem;
