--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,7 +8,17 @@
         <%- include('partials/header.ejs') %>
     </header>
     <main>
+        
         <h1> Bienvenidos elegi tu destino </h1>
+
+        <div class="menu">
+            <nav >
+              <a href="/login">Ingresá</a>
+              <span class="separador">|
+              <a href="/registro"> Registrate </a>
+            </nav>
+          </div>
+          
         <div class="box">
             <h2> Turisteamos en:  </h2>
                <select name="lista-provincia">
