--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -5,8 +5,9 @@
 </head>
 <body>
     <header class="header">
+        <%- include('../partials/header.ejs') %>
         <div class="header-img">
-            <img src="/../../images/gif fondo blanco.gif" width=300px height=300px alt="logo">
+            <img src="/public/images/imagenheader.jpg" width=300px height=300px alt="logo">
          </div>   
         
         <div class ="text"> 
@@ -20,7 +21,7 @@
                 <a class="fab fa-cc-visa"> </a>
             
         </div>
-        <%- include('../partials/header.ejs') %>
+        
     </header>
 
 
