--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,27 +1,19 @@
 <header>
     <div class="container">
       <div class="header-left">
-          <nav>
-            <a href="#">Turisteando</a>
-          </nav>
+     
       </div>
       <div class="header-center">
-        <img src="../../../public/images/gif.gif" alt="logo">
+        <img src="/images/gif.gif" alt="logo" style="width: 50%;">
       </div>
       <div class="header-right">
           <nav>
               <a href="/carrito"><i class="fas fa-shopping-cart"></i></a>
               <a href="#"><i class="fab fa-facebook-square"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="/contact"><i class="fas fa-envelope"></i></a>           
+              <a href="/contacto"><i class="fas fa-envelope"></i></a>           
           </nav>
       </div>
     </div>
-    <div class="menu">
-      <nav >
-        <a href="/login">Ingresá</a>
-        <span class="separador">|
-        <a href="/registro"> Registrate </a>
-      </nav>
-    </div>
+
   </header>
