--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -9,6 +9,7 @@
 </header>
 
 <body>
+    <div class="container">
     <section class="login-completo">
        
         <div class="login-cuadro">
@@ -40,6 +41,7 @@
                 <button type="submit">Enviar</button>
             </div>
         </form>
+    </div>
     </div>
 </div>
 </div>
