--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,5 +1,5 @@
     <footer>
-    
+      <div class="contendor">
         <ul class="footer" >
           <li>
             <a href="#0">
@@ -33,5 +33,6 @@
         </ul>
           <a>Copyright © 1999-2021 TURISTEANDO S.A. </a>
         </div>
+      </div>
         
         </footer>
