--- a/src/views/products/buenosaires.ejs
+++ b/src/views/products/buenosaires.ejs
@@ -12,10 +12,9 @@
     <header>
         <%- include('../partials/header.ejs') %>
     </header>
-    <main>
+    <div class="container">
         <h1>Conocé Buenos Aires</h1>
-    </main>
-  
+    
 
     <h3>Alojamiento</h3>
 
@@ -80,6 +79,7 @@
             <p>
                 Caja 9
             </p>
+        </div>
         </div>
      
     </div>
