--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -4,6 +4,7 @@
     <%- include('../partials/head.ejs') %>
 </head>
 <body>
+    <div class="container">
     <header class="header">
         <%- include('../partials/header.ejs') %>
         <div class="header-img">
@@ -47,6 +48,7 @@
         <br>
         
     </div>
+    
 
     </section>
 
@@ -84,7 +86,7 @@
                 </div>
                 </form>
             </div>
-            
+        </div>
         </div>
     </section>
 
