--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -18,9 +18,6 @@
 	justify-content: space-between;
 	margin-bottom: 20px;
 	
-
-	
-	
 	
   }
   
@@ -71,5 +68,10 @@
   .footer a:hover .border-bottom {
 	transform: scaleX(1);
   }
-
+  
+  .contendor {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
