--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -7,6 +7,7 @@
 <body>
     <%- include('partials/header.ejs') %>
     <main>
+        <div class="container">
         <div class="register-form">
             <h1>Inicia sesión</h1>
             <form action="exito.html" method="POST">
@@ -52,6 +53,7 @@
             </form>
         </div>
         <hr>
+    </div>
  
     </main>
     <%- include('partials/footer.ejs') %>
