--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,22 +3,27 @@
       <div class="header-left">
      
       </div>
+      <div class="buscador">
       <div class="header header-center">
         <img src="/images/gif.gif" alt="logo" style="width: 50%;">
       </div>
       <div class="header header-right">
           <nav>
-              <a href="/carrito"><i class="fas fa-shopping-cart"></i></a>
-              <a href="#"><i class="fab fa-facebook-square"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="/contacto"><i class="fas fa-envelope"></i></a>           
+            <a href="/">Mapa</a>
+            <span class="separador">|
+            <a href="/login">Ingresá</a>
+            <span class="separador">|
+            <a href="/registro"> Registrate </a>
+              
           </nav>
       </div>
       <div class="menu">
         <nav >
-          <a href="/login">Ingresá</a>
-          <span class="separador">|
-          <a href="/registro"> Registrate </a>
+          <a href="/carrito"><i class="fas fa-shopping-cart"></i></a>
+              <a href="#"><i class="fab fa-facebook-square"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="/contacto"><i class="fas fa-envelope"></i></a>           
+            </div>
         </nav>
       </div>
     </div>
