--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,42 +10,35 @@
 
 <body>
     <div class="container">
-    <section class="login-completo">
-       
-        <div class="login-cuadro">
-            <div class="login-superior">
-
-    <div class="login-form">
-        <h1>Inicia sesión</h1>
-        <div class="login">
-            <form action="/login.html" method="POST">
-            <div class="nombreUsuario">
-                 <label for="nombre"><i class="fas fa-user">Nombre Usuario:</i> </label>
-                 <input type="text" name="nombre-usuario" id="nombre" placeholder="Ingrese nombre de usuario aquí">
-            </div>
-            <div class="contraseñaUsuario">
-                 <label for="clave"><i class="fas fa-key"></i> Contraseña:</label>
-                 <input type="password" name="clave" id="clave" placeholder="Ingrese su contraseña aquí">
-            </div>
-            <div class="row">
-                <p>Perfil de usuario:</p>
-                <label>
-                    <input type="checkbox" name="user-type" id="user-type-traveller" value="traveller"> Viajero
-                </label>
-                <label>
-                    <input type="checkbox" name="user-type" id="user-type-admin" value="admin"> Administrador
-                </label>
-            </div>
-
+<section >
+    <!-- login div -->
+<div class="login">
+    <!-- login header -->
+      <h1 id="header">Ingresá con tu nombre y contraseña</h1>
+      <form id="form" action="/login.html" method="POST">
+        <div class="nombreUsuario">
+             <label for="nombre"><i class="fas fa-user">Nombre Usuario:</i> </label>
+             <input type="text" name="nombre-usuario" id="nombre" placeholder="Ingrese nombre de usuario aquí">
+        </div>
+        <div class="contraseñaUsuario">
+             <label for="clave"><i class="fas fa-key"></i> Contraseña:</label>
+             <input type="password" name="clave" id="clave" placeholder="Ingrese su contraseña aquí">
+        </div>
+        <div class="user-type">
+            <p>Perfil de usuario:</p>
+            <label>
+                <input type="checkbox" name="user-type" id="user-type-traveller" value="traveller"> Viajero
+            </label>
+            <label>
+                <input type="checkbox" name="user-type" id="user-type-admin" value="admin"> Administrador
+            </label>
             <div class="row">
                 <button type="submit">Enviar</button>
             </div>
-        </form>
-    </div>
-    </div>
-</div>
-</div>
+            </div>
+        </div>
 </section>
+
     <footer>
          <%- include('partials/footer.ejs') %>
     </footer>
