--- a/src/views/products/buenosaires.ejs
+++ b/src/views/products/buenosaires.ejs
@@ -8,22 +8,25 @@
     <title>Buenos Aires</title>
     <%- include('../partials/head.ejs') %>
 </head>
+
 <body>
     <header>
         <%- include('../partials/header.ejs') %>
     </header>
+
     <div class="container">
+
         <h1>Conocé Buenos Aires</h1>
+
+        
     
-
-    <h3>Alojamiento</h3>
-
+    <h2>Alojamiento</h2>
     <div class="pic-container">
         <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
 
             <p>
-                Caja 1<br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident hic, consequatur officia totam, numquam impedit molestiae eum quo ea tenetur ipsum blanditiis sit, nesciunt iusto! Rerum voluptatum sint aperiam. Obcaecati?
+                Caja 1<br>
             </p>
         </div>
         <div class="pic-item">
@@ -39,8 +42,7 @@
             </p>
         </div>
 <br>
-        <h3>Pasajes</h3>
-
+        <h2>Pasajes</h2>
         <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
             <p>
@@ -59,9 +61,8 @@
                 Caja 6
             </p>
         </div>
-        <h3> Que hacer</h3>
 
-
+        <h2> Que hacer</h2>
         <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
             <p>
@@ -81,6 +82,8 @@
             </p>
         </div>
         </div>
+
+        <h2 class="categories">Ofertas destacadas</h2>
      
     </div>
     <footer>  <%- include('../partials/footer.ejs') %></footer>
