--- a/src/views/not_found.ejs
+++ b/src/views/not_found.ejs
@@ -6,9 +6,9 @@
     <!-- Header -->
     <%- include('./partials/header.ejs') %>
     <main>
-        <div class="aligner-container">
+        <div class="container">
             <!-- Page content -->
-            <div class="img-center">
+            <div>
                 <img src ="/img/404.jpeg"  alt="not-found"   width="1200" height="800"> 
             </div>
         </div>
