--- a/src/views/products/buenosaires.ejs
+++ b/src/views/products/buenosaires.ejs
@@ -14,17 +14,18 @@
     </header>
     <main>
         <h1>Conocé Buenos Aires</h1>
-    </main>
-  
-
+ 
     <h3>Alojamiento</h3>
-
+      
+    
+    <div class="container">
     <div class="pic-container">
         <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
 
             <p>
-                Caja 1<br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident hic, consequatur officia totam, numquam impedit molestiae eum quo ea tenetur ipsum blanditiis sit, nesciunt iusto! Rerum voluptatum sint aperiam. Obcaecati?
+                Caja 1
+                <br>
             </p>
         </div>
         <div class="pic-item">
@@ -39,8 +40,42 @@
                 Caja 3
             </p>
         </div>
-<br>
-        <h3>Pasajes</h3>
+
+
+
+        <h3>Que hacer</h3>
+
+    <div class="pic-container">
+        <div class="pic-item">
+            <img src="/public/images/obelisco.jpg" alt="Imagen del producto">
+
+            <p>
+                Caja 4
+                <br>
+            </p>
+        </div>
+        <div class="pic-item">
+            <img src="img/product-bg.jpeg" alt="Imagen del producto">
+            <p>
+                Caja 5
+            </p>
+        </div>
+        <div class="pic-item">
+            <img src="img/product-bg.jpeg" alt="Imagen del producto">
+            <p>
+                Caja 6
+            </p>
+        </div>
+    </div>
+
+</main>
+    <footer>  <%- include('../partials/footer.ejs') %></footer>
+</body>
+</html>
+
+
+
+<!--        <h3>Pasajes</h3>
 
         <div class="pic-item">
             <img src="img/product-bg.jpeg" alt="Imagen del producto">
@@ -82,7 +117,4 @@
             </p>
         </div>
      
-    </div>
-    <footer>  <%- include('../partials/footer.ejs') %></footer>
-</body>
-</html>
+    </div>-->
