--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,7 +13,7 @@
             <span class="separador">|
             <a href="/login">Ingresá</a>
             <span class="separador">|
-            <a href="/registro"> Registrate </a>
+            <a href="/register"> Registrate </a>
               
           </nav>
       </div>
