--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>  
-    <%- include('partials/head.ejs') %>
+    <%- include('../partials/head.ejs') %>
 </head>
 
 <header> 
-    <%- include('partials/header.ejs') %>  
+    <%- include('../partials/header.ejs') %>  
 </header>
 
 <body>
@@ -40,7 +40,7 @@
 </section>
 
     <footer>
-         <%- include('partials/footer.ejs') %>
+         <%- include('../partials/footer.ejs') %>
     </footer>
    
 </body>
