--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('partials/head.ejs') %>
+    <%- include('../partials/head.ejs') %>
 </head>
 <body>
-    <%- include('partials/header.ejs') %>
+    <%- include('../partials/header.ejs') %>
     <main>
         <div class="container">
         <div class="register-form">
@@ -63,6 +63,6 @@
  
     </main>
 
-    <%- include('partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 </body>
 </html>
