--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1,4 +1,16 @@
 * { box-sizing: border-box; }
+body {
+    font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif;
+    
+  }
+
+h3 {
+    padding: 60px 0;
+    color: lightblue;
+    font-size: 20px;
+    text-align: center;
+}
+
 
 .container {
     padding: 60px 0;
