--- a/src/views/products/buenosaires.ejs
+++ b/src/views/products/buenosaires.ejs
@@ -13,62 +13,92 @@
         <%- include('../partials/header.ejs') %>
     </header>
     <main>
+
+        <!--primer titulo que siempre queda fijo-->
+
         <h1>Conocé Buenos Aires</h1>
  
-    <h3>Alojamiento</h3>
-      
+<h3 class="color-h3">Que hacer</h3>
+
+      <!--primer box de fotos -->
     
-    <div class="container">
-    <div class="pic-container">
+    <div class="container1">
+    <div class="pic-container1">
         <div class="pic-item">
-            <img src="img/product-bg.jpeg" alt="Imagen del producto">
+            <img src="/images/bsas.jpg" alt="obelisco">
 
             <p>
-                Caja 1
-                <br>
-            </p>
-        </div>
-        <div class="pic-item">
-            <img src="img/product-bg.jpeg" alt="Imagen del producto">
-            <p>
-                Caja 2
-            </p>
-        </div>
-        <div class="pic-item">
-            <img src="img/product-bg.jpeg" alt="Imagen del producto">
-            <p>
-                Caja 3
+                Buenos Aires de noche
             </p>
         </div>
 
-
-
-        <h3>Que hacer</h3>
-
-    <div class="pic-container">
         <div class="pic-item">
-            <img src="" alt="Imagen del producto">
+            <img src="/images/caminito2.jpg" alt="Imagen del producto">
 
             <p>
-                Caja 4
-                <br>
+                Clásico city tour porteño
+            </p>
+
+        </div>
+        <div class="pic-item">
+            <img src="images/comida1.jpg" alt="Imagen del producto">
+
+            <p>
+                Gastronomia
             </p>
         </div>
         <div class="pic-item">
-            <img src="img/product-bg.jpeg" alt="Imagen del producto">
+            <img src="images/flor1.jpg" alt="Imagen del producto">
+
             <p>
-                Caja 5
+                Excursiones de dia
             </p>
+        </div>
+ </div>
+</div>
+
+<h3 class="color-h3">Alojamiento</h3>
+
+<div class="container1">
+    <div class="pic-container1">
+        <div class="pic-item">
+            <img src="/images/barolo.jpg" alt="obelisco">
+
+            <p>
+                Hoteles deluxe
+            </p>
+        </div>
+
+        <div class="pic-item">
+            <img src="/images/hostel.jpg" alt="Imagen del producto">
+
+            <p>
+                Hosteles
+            </p>
+
         </div>
         <div class="pic-item">
-            <img src="img/product-bg.jpeg" alt="Imagen del producto">
+            <img src="images/depto.jpg" alt="Imagen del producto">
+
             <p>
-                Caja 6
+                Departamentos 
             </p>
         </div>
-    </div>
+  
+
+
+  
+
 
 </main>
+
+
+
+
+
+
+<!--FOOTER-->
+
     <footer>  <%- include('../partials/footer.ejs') %></footer>
 </body>
 </html>
