--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1,32 +1,41 @@
 * { box-sizing: border-box; }
+
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif;
     
   }
 
-h3 {
+.color-h3{
+    
     padding: 60px 0;
-    color: lightblue;
+    color: black;
+    background-color:pink;
+    background-size: 10px;
     font-size: 20px;
     text-align: center
  
 
 }
 
+/* box de fotos*/
 
-.container {
+.container1 {
     padding: 60px 0;
     width: 90%;
     max-width: 1000px;
     margin: auto;
     overflow: hidden;
-   
+    text-align: center;
+    flex-direction: row;
 }
 
-.pic-container {
+.pic-container1 {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
+    justify-content: space-around;
+    
     /* align-items: flex-end;
     align-content: flex-end; */
     /*flex-direction: column;*/
@@ -50,6 +59,31 @@ h3 {
 
 .pic-item img { width: 100%; }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* no se para que es ahora
 @media (min-width: 600px) {
     .pic-item {
         width: calc(50% - 1rem);
