--- a/src/views/products/buenosaires.ejs
+++ b/src/views/products/buenosaires.ejs
@@ -18,7 +18,7 @@
 
         <h1>Conocé Buenos Aires</h1>
  
-<h3 class="color-h3">Que hacer</h3>
+<h3 class="color-h3">QUE HACER</h3>
 
       <!--primer box de fotos -->
     
@@ -26,10 +26,13 @@
     <div class="pic-container1">
         <div class="pic-item">
             <img src="/images/bsas.jpg" alt="obelisco">
-
+            
+            <!--link que te lleva a Buenos Aires de noche-->
             <p>
-                Buenos Aires de noche
+               <nav><a href="/bairesnoche">Buenos Aires de noche</a></nav> 
+
             </p>
+
         </div>
 
         <div class="pic-item">
@@ -57,7 +60,7 @@
  </div>
 </div>
 
-<h3 class="color-h3">Alojamiento</h3>
+<h3 class="color-h3">ALOJAMIENTO</h3>
 
 <div class="container1">
     <div class="pic-container1">
