--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,7 +9,7 @@
     </header>
     <main>
         <div class="container">
-        <h1> Bienvenidos elegi tu destino </h1>
+        <h1> ElegÍ tu próximo destino </h1>
 
        
           
