--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,4 +1,7 @@
-    <footer>
+    <footer class="colorfondo">
+
+      <div></div>
+
       <div class="contendor">
         <ul class="footer" >
           <li>
