--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -27,25 +27,35 @@
         </nav>
       </div>
     </div>
+
+
+
+
     <!-- Slideshow container -->
 <div class="slideshow-container">
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="/images/imagenheader.jpg" style="width:100%">
+    <img src="/images/norte1.jpg" style="width:100%">
     <div class="text">Caption Text</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="/images/misiones.jpg" style="width:100%">
+    <img src="/images/sur1.jpg" style="width:100%">
     <div class="text">Caption Two</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
     <img src="/images/mendoza.jpg" style="width:100%">
+    <div class="text">Caption Three</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="/images/chalten1.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
 
