--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,7 +4,9 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif;
     
   }
-
+h2{
+    text-align: center;
+}
 .contendor {
     width: 100%;
     max-width: 1200px;
