--- a/src/views/products/buenosaires.ejs
+++ b/src/views/products/buenosaires.ejs
@@ -87,6 +87,23 @@
                 Departamentos 
             </p>
         </div>
+    </div>
+</div>
+
+        <h3 class="color-h3">PASAJES</h3>
+
+<div class="container1">
+    <div class="pic-container1">
+        <div class="pic-item">
+            <img src="/images/avion.jpg" alt="avion">
+
+            <p>
+                Gestioná tu reserva acá
+            </p>
+        </div>
+
+      
+  
   
 
 
